front: added expand/collapse in chatTile

--- a/frontend/assets/css/uconnect-main-theme.css
+++ b/frontend/assets/css/uconnect-main-theme.css
@@ -8798,6 +8798,10 @@ button.bg-info:focus {
   background-color: #cf2e2e !important;
 }
 
+.clark-color {
+  color: #cf2e2e !important;
+}
+
 
 
 a.bg-uconnect:hover,
